use @Spy instead of @Mock to test AssaultProperties too.