@@ -18,7 +18,6 @@ package de.codecentric.spring.boot.chaos.monkey.component;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import de.codecentric.spring.boot.chaos.monkey.assaults.ChaosMonkeyAssault;
@@ -31,11 +30,14 @@ import de.codecentric.spring.boot.chaos.monkey.configuration.toggles.DefaultChao
 import de.codecentric.spring.boot.chaos.monkey.configuration.toggles.DefaultChaosToggles;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 /** @author Benjamin Wilms */
@@ -44,7 +46,7 @@ class ChaosMonkeyRequestScopeTest {
 
     ChaosMonkeyRequestScope chaosMonkeyRequestScope;
 
-    @Mock
+    @Spy
     AssaultProperties assaultProperties;
 
     @Mock
@@ -86,7 +88,7 @@ class ChaosMonkeyRequestScopeTest {
 
         @BeforeEach
         void setUpForChaosMonkeyExecutionEnabled() {
-            given(assaultProperties.getLevel()).willReturn(1);
+            assaultProperties.setLevel(1);
             given(assaultProperties.getTroubleRandom()).willReturn(1);
             given(chaosMonkeyProperties.isEnabled()).willReturn(true);
             given(chaosMonkeySettings.getAssaultProperties()).willReturn(assaultProperties);
@@ -187,7 +189,7 @@ class ChaosMonkeyRequestScopeTest {
 
         @Test
         void givenAssaultLevelTooHighExpectNoLogging() {
-            given(assaultProperties.getLevel()).willReturn(1000);
+            assaultProperties.setLevel(1000);
             given(assaultProperties.getTroubleRandom()).willReturn(9);
 
             chaosMonkeyRequestScope.callChaosMonkey(null, null);
@@ -198,10 +200,7 @@ class ChaosMonkeyRequestScopeTest {
 
         @Test
         void chaosMonkeyIsNotCalledWhenServiceNotWatched() {
-            String customService = "CustomService";
-
-            given(assaultProperties.getWatchedCustomServices()).willReturn(Collections.singletonList(customService));
-            given(chaosMonkeySettings.getAssaultProperties().isWatchedCustomServicesActive()).willReturn(true);
+            assaultProperties.setWatchedCustomServices(List.of("CustomService"));
 
             chaosMonkeyRequestScope.callChaosMonkey(null, "notInListService");
 
@@ -211,15 +210,13 @@ class ChaosMonkeyRequestScopeTest {
 
         @Test
         void chaosMonkeyIsCalledWhenServiceIsWatched() {
-            String customService = "CustomService";
-
+            assaultProperties.setWatchedCustomServices(List.of("CustomService"));
             given(exceptionAssault.isActive()).willReturn(true);
-            given(assaultProperties.getWatchedCustomServices()).willReturn(Collections.singletonList(customService));
             given(chaosMonkeySettings.getAssaultProperties().isWatchedCustomServicesActive()).willReturn(true);
             given(latencyAssault.isActive()).willReturn(true);
             given(assaultProperties.chooseAssault(2)).willReturn(0);
 
-            chaosMonkeyRequestScope.callChaosMonkey(null, customService);
+            chaosMonkeyRequestScope.callChaosMonkey(null, "CustomService");
 
             verify(latencyAssault).attack();
             verify(exceptionAssault, never()).attack();
@@ -227,16 +224,13 @@ class ChaosMonkeyRequestScopeTest {
 
         @Test
         void chaosMonkeyIsCalledWhenServiceIsWatchedWhenSimpleNameIsMethodReference() {
-            String customRepository = "org.springframework.data.repository.CrudRepository";
-
+            assaultProperties.setWatchedCustomServices(List.of("org.springframework.data.repository.CrudRepository"));
             given(exceptionAssault.isActive()).willReturn(true);
-            given(assaultProperties.getWatchedCustomServices()).willReturn(Collections.singletonList(customRepository));
             given(chaosMonkeySettings.getAssaultProperties().isWatchedCustomServicesActive()).willReturn(true);
             given(latencyAssault.isActive()).willReturn(true);
             given(assaultProperties.chooseAssault(2)).willReturn(0);
 
-            String simpleName = customRepository + ".findAll";
-            chaosMonkeyRequestScope.callChaosMonkey(null, simpleName);
+            chaosMonkeyRequestScope.callChaosMonkey(null, "org.springframework.data.repository.CrudRepository.findAll");
 
             verify(latencyAssault).attack();
             verify(exceptionAssault, never()).attack();
@@ -244,16 +238,12 @@ class ChaosMonkeyRequestScopeTest {
 
         @Test
         void chaosMonkeyIsCalledWhenServiceIsWatchedWhenSimpleNameIsPackageReference() {
-            String packageName = "org.springframework.data.repository";
-
+            assaultProperties.setWatchedCustomServices(List.of("org.springframework.data.repository"));
             given(exceptionAssault.isActive()).willReturn(true);
-            given(assaultProperties.getWatchedCustomServices()).willReturn(Collections.singletonList(packageName));
-            given(chaosMonkeySettings.getAssaultProperties().isWatchedCustomServicesActive()).willReturn(true);
             given(latencyAssault.isActive()).willReturn(true);
             given(assaultProperties.chooseAssault(2)).willReturn(0);
 
-            String simpleName = packageName + "CrudRepository.findAll";
-            chaosMonkeyRequestScope.callChaosMonkey(null, simpleName);
+            chaosMonkeyRequestScope.callChaosMonkey(null, "org.springframework.data.repository.CrudRepository.findAll");
 
             verify(latencyAssault).attack();
             verify(exceptionAssault, never()).attack();
@@ -275,13 +265,12 @@ class ChaosMonkeyRequestScopeTest {
 
     @Test
     void assaultShouldBeDeterministicIfConfigured() {
+        assaultProperties.setLevel(3);
+        assaultProperties.setDeterministic(true);
         ChaosMonkeyAssault customAssault = mock(ChaosMonkeyAssault.class);
         given(customAssault.isActive()).willReturn(true);
         given(chaosMonkeyProperties.isEnabled()).willReturn(true);
         given(chaosMonkeySettings.getAssaultProperties()).willReturn(assaultProperties);
-
-        given(assaultProperties.isDeterministic()).willReturn(true);
-        given(assaultProperties.getLevel()).willReturn(3);
 
         ChaosMonkeyRequestScope customScope = new ChaosMonkeyRequestScope(chaosMonkeySettings, Collections.emptyList(),
                 Collections.singletonList(customAssault), metricEventPublisherMock, new DefaultChaosToggles(),
